--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -1,4 +1,13 @@
-$warna : green
+@import color
 
 body
-    background-color: $warna
+    background-color: $bg
+    h1
+        color: $text
+        font-size: 4rem
+        font-family: sans-serif
+        font-weight: normal
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
